--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,22 @@
 Package: partools
-Version: 1.0.1
-Author: Norm Matloff <normmatloff@gmail.com>
+Version: 1.1.1
+Author: Norm Matloff <normmatloff@gmail.com> [aut], 
+   Alex Rumbaugh <aprumbaugh@ucdavis.edu> [ctb]
 Maintainer: Norm Matloff <normmatloff@gmail.com>
-Date: 12/15/2014
+Date: 2015-07-20
 Title: Tools for the 'Parallel' Package
 Description: Miscellaneous utilities for the 'parallel' package, 
-   cluster-oriented section.  Includes a debugging aid.
-Depends: parallel
-OS_type: Linux/Mac/Unix needed for the dbs() debugging tool
-LazyLoad: no
+   cluster-oriented section; "Snowdoop" alternative to MapReduce;
+   file splitting and distributed operations such as sort and aggregate.
+   "Software Alchemy" method for parallelizing most statistical methods,
+   presented in N. Matloff, Parallel Computation for Data Science,
+   Chapman and Hall, 2015.  Includes a debugging aid.
+Depends: parallel,stats,utils
+Suggests: data.table
 ByteCompile: yes
 NeedsCompilation: no
 License: GPL (>= 2)
 Repository: CRAN
-Packaged: 2015-01-03 00:41:47 UTC; normanmatloff
-Date/Publication: 2015-01-03 07:03:08
+Date/Publication: 2015-07-21 08:05:38
+Packaged: 2015-07-21 05:41:46 UTC; nm
+OS_type: unix
