--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,12 @@
 
-import(parallel)
+import(parallel,stats,utils)
 
 export(dbs,writemgrscreen,writewrkrscreens,killdebug,dbsmsgstart,dbsmsg,
-   formrowchunks,matrixtolist,addlists,getpte,filesort,
-   setclsinfo,filechunkname,ca,exportlibpaths,filesplit)
+   formrowchunks,matrixtolist,addlists,getpte,filesort,filecat,linecount,
+      readnscramble,getnumdigs,filesave,fileread,filesplitrand,fileagg,
+      dfileagg,filegetrows,dfilegetrows,
+   distribsplit,distribcat,distribagg,distribrange,
+      distribcounts,distribgetrows,docmd,geteltis,
+   ca,cabase,calm,caglm,caprcomp,cakm,cameans,caquantile,caagg,
+   setclsinfo,filechunkname,exportlibpaths,filesplit)
  
